@@ -4,8 +4,8 @@
 
 use strict;
 use Test;
-BEGIN { plan tests => 8 }
-use Starlink::HDSPACK qw/ creobj /;
+BEGIN { plan tests => 11 }
+use Starlink::HDSPACK qw/ creobj setobj /;
 
 $Starlink::HDSPACK::DEBUG = 1;
 
@@ -18,6 +18,10 @@ my $good = $status;
 # Now need to set up a target
 my $out = "out$$";
 my @dims = (32,48);
+my $nitems = 1;
+for (@dims) {
+  $nitems *= $_;
+}
 
 # First the file
 $status = creobj($out, 'NDF',$status);
@@ -26,6 +30,9 @@ ok($status, $good);
 #DAT_NEW( NLOC, 'DATA_ARRAY', '_UBYTE', 2, DIMS, STATUS )
 $status = creobj($out .".DATA_ARRAY", '_UBYTE', \@dims,$status);
 ok($status, $good);
+
+# Set a value
+$status = setobj($out .".DATA_ARRAY", [map {5} (1..$nitems)], $status);
 
 #DAT_NEWC( NLOC, 'LABEL', 80, 0, 0, STATUS )
 $status = creobj($out .".LABEL", '_CHAR*80', $status);
@@ -51,7 +58,21 @@ ok($status, $good);
 $status = creobj($out. ".AXIS(2).LABEL", '_CHAR*30', $status);
 ok($status, $good);
 
+# FITS
+$status = creobj($out. ".MORE", 'EXT', $status);
+ok($status, $good);
 
+my $nfits = 10;
+$status = creobj($out. ".MORE.FITS", '_CHAR*80',[$nfits], $status);
+ok($status, $good);
+
+# And put something in it
+my @fits;
+for (0..($nfits-1)) {
+  $fits[$_] = "COMMENT A fits header $_";
+}
+$status = setobj($out . ".MORE.FITS", \@fits, $status);
+ok($status, $good);
 
 unlink "${out}.sdf"
   or die "Error removing temporary file";
